--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
+
+    <!--
+
+    Tela de login
+
+    -->
+
     <string name="app_name">SIDED</string>
     <string name="textViewBemVindo">Bem vindo ao Sistema de Estudos - SIDED</string>
     <string name="hintDigiteSeuEmail">Digite seu e-mail</string>
@@ -6,6 +13,55 @@
     <string name="buttonAcessar">Acessar</string>
     <string name="buttonLimpar">Limpar</string>
     <string name="erroAutenticacao">Usuário ou senha inválidos.</string>
+
+    <!--
+
+    Tela tarefas
+
+    -->
+
+    <string name="textViewTarefa">Tarefas</string>
+    <string name="textViewSeleTare">Selecione a tarefa:</string>
+
+    <string-array name="lista_cursos_tarefa">
+        <item>Processo e qualidade de software</item>
+        <item>Sistemas Operacionais II</item>
+        <item>Desenvolvimento para dispositivos móveis</item>
+        <item>Projeto Integrador I</item>
+        <item>Teste de Software</item>
+        <item>Linguagem de programação IV</item>
+    </string-array>
+
+    <string-array name="lista_aulas">
+        <item>Aula 1 - Introdução</item>
+        <item>Aula 2 - Materia I</item>
+        <item>Aula 2 - Laboratório I</item>
+        <item>Aula 3 - Materia II</item>
+        <item>Aula 3 - Laboratório II</item>
+    </string-array>
+
+    <string name="textViewExecFeito">Exercício Feito?</string>
+    <string name="textViewLabEnv">Laboratório Enviado?</string>
+    <string name="buttonProgresso">Progresso</string>
+    <string name="buttonCadastro">Cadastro</string>
+    <string name="buttonSair">Sair</string>
+
+    <!--
+
+    Tela de progresso
+
+    -->
+
+    <string name="textViewProgresso">Progresso das aulas</string>
+    <string name="textViewProgAulas">Aulas dadas:</string>
+    <string name="textViewProgExecFeitos">Exercícios feitos:</string>
+    <string name="textViewProgLabsEnviados">Laboratórios enviados ao GitHub:</string>
+
+    <!--
+
+    Tela de cadastro
+
+    -->
 
     <string name="textViewCadastro">Cadastro do Aluno</string>
     <string name="hintCadNome">Nome</string>
